--- a/Bookswagon/Reports/index.html
+++ b/Bookswagon/Reports/index.html
@@ -49,7 +49,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">22-08-2020 17:38:47</span>
+                    <span class="badge badge-primary">23-08-2020 10:41:20</span>
                 </a>
             </li>
         </ul>
@@ -119,8 +119,8 @@
 						<div class="open-test">
 							<div class="test-detail"> 
 								<p class="name">BookswagonLogin</p> 
-								<p class="duration text-sm">0h:0m:0s+061ms</p> 
-								<span class="datetime">17:39:24 PM</span>
+								<p class="duration text-sm">0h:0m:0s+055ms</p> 
+								<span class="datetime">10:41:57 AM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -128,9 +128,9 @@
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">BookswagonLogin</h5>
-										<span class='badge badge-success'>22-08-2020 17:39:24</span>
-										<span class='badge badge-danger'>22-08-2020 17:39:24</span>
-										<span class='badge badge-default'>0h:0m:0s+061ms</span>
+										<span class='badge badge-success'>23-08-2020 10:41:57</span>
+										<span class='badge badge-danger'>23-08-2020 10:41:57</span>
+										<span class='badge badge-default'>0h:0m:0s+055ms</span>
 									</div>
 																	</div>
 							</div>
@@ -145,13 +145,13 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>17:39:24</td>
+				<td>10:41:57</td>
 				<td>
 <span class='badge black-text green'>BookswagonLogin</span>									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>17:39:24</td>
+				<td>10:41:57</td>
 				<td>
 Test Passed									</td>
 			</tr>
@@ -169,7 +169,7 @@ Test Passed									</td>
 							<div class="test-detail"> 
 								<p class="name">BookSearching</p> 
 								<p class="duration text-sm">0h:0m:0s+000ms</p> 
-								<span class="datetime">17:39:48 PM</span>
+								<span class="datetime">10:42:21 AM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -177,8 +177,8 @@ Test Passed									</td>
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">BookSearching</h5>
-										<span class='badge badge-success'>22-08-2020 17:39:48</span>
-										<span class='badge badge-danger'>22-08-2020 17:39:48</span>
+										<span class='badge badge-success'>23-08-2020 10:42:21</span>
+										<span class='badge badge-danger'>23-08-2020 10:42:21</span>
 										<span class='badge badge-default'>0h:0m:0s+000ms</span>
 									</div>
 																	</div>
@@ -194,13 +194,13 @@ Test Passed									</td>
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>17:39:48</td>
+				<td>10:42:21</td>
 				<td>
 <span class='badge black-text green'>BookSearching</span>									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>17:39:48</td>
+				<td>10:42:21</td>
 				<td>
 Test Passed									</td>
 			</tr>
@@ -218,7 +218,7 @@ Test Passed									</td>
 							<div class="test-detail"> 
 								<p class="name">SearchBooks</p> 
 								<p class="duration text-sm">0h:0m:0s+000ms</p> 
-								<span class="datetime">17:39:54 PM</span>
+								<span class="datetime">10:42:29 AM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -226,8 +226,8 @@ Test Passed									</td>
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">SearchBooks</h5>
-										<span class='badge badge-success'>22-08-2020 17:39:54</span>
-										<span class='badge badge-danger'>22-08-2020 17:39:54</span>
+										<span class='badge badge-success'>23-08-2020 10:42:29</span>
+										<span class='badge badge-danger'>23-08-2020 10:42:29</span>
 										<span class='badge badge-default'>0h:0m:0s+000ms</span>
 									</div>
 																	</div>
@@ -243,13 +243,13 @@ Test Passed									</td>
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>17:39:54</td>
+				<td>10:42:29</td>
 				<td>
 <span class='badge black-text green'>SearchBooks</span>									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>17:39:54</td>
+				<td>10:42:29</td>
 				<td>
 Test Passed									</td>
 			</tr>
@@ -267,7 +267,7 @@ Test Passed									</td>
 							<div class="test-detail"> 
 								<p class="name">AddtoCart</p> 
 								<p class="duration text-sm">0h:0m:0s+000ms</p> 
-								<span class="datetime">17:40:12 PM</span>
+								<span class="datetime">10:42:45 AM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -275,8 +275,8 @@ Test Passed									</td>
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">AddtoCart</h5>
-										<span class='badge badge-success'>22-08-2020 17:40:12</span>
-										<span class='badge badge-danger'>22-08-2020 17:40:12</span>
+										<span class='badge badge-success'>23-08-2020 10:42:45</span>
+										<span class='badge badge-danger'>23-08-2020 10:42:45</span>
 										<span class='badge badge-default'>0h:0m:0s+000ms</span>
 									</div>
 																	</div>
@@ -292,13 +292,13 @@ Test Passed									</td>
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>17:40:12</td>
+				<td>10:42:45</td>
 				<td>
 <span class='badge black-text green'>AddtoCart</span>									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>17:40:12</td>
+				<td>10:42:45</td>
 				<td>
 Test Passed									</td>
 			</tr>
@@ -316,7 +316,7 @@ Test Passed									</td>
 							<div class="test-detail"> 
 								<p class="name">DeliveryAddress</p> 
 								<p class="duration text-sm">0h:0m:0s+000ms</p> 
-								<span class="datetime">17:40:35 PM</span>
+								<span class="datetime">10:43:05 AM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -324,8 +324,8 @@ Test Passed									</td>
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">DeliveryAddress</h5>
-										<span class='badge badge-success'>22-08-2020 17:40:35</span>
-										<span class='badge badge-danger'>22-08-2020 17:40:35</span>
+										<span class='badge badge-success'>23-08-2020 10:43:05</span>
+										<span class='badge badge-danger'>23-08-2020 10:43:05</span>
 										<span class='badge badge-default'>0h:0m:0s+000ms</span>
 									</div>
 																	</div>
@@ -341,13 +341,13 @@ Test Passed									</td>
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>17:40:35</td>
+				<td>10:43:05</td>
 				<td>
 <span class='badge black-text green'>DeliveryAddress</span>									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>17:40:35</td>
+				<td>10:43:05</td>
 				<td>
 Test Passed									</td>
 			</tr>
@@ -365,7 +365,7 @@ Test Passed									</td>
 							<div class="test-detail"> 
 								<p class="name">Login</p> 
 								<p class="duration text-sm">0h:0m:0s+000ms</p> 
-								<span class="datetime">17:40:43 PM</span>
+								<span class="datetime">10:43:14 AM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -373,8 +373,8 @@ Test Passed									</td>
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">Login</h5>
-										<span class='badge badge-success'>22-08-2020 17:40:43</span>
-										<span class='badge badge-danger'>22-08-2020 17:40:43</span>
+										<span class='badge badge-success'>23-08-2020 10:43:14</span>
+										<span class='badge badge-danger'>23-08-2020 10:43:14</span>
 										<span class='badge badge-default'>0h:0m:0s+000ms</span>
 									</div>
 																	</div>
@@ -390,13 +390,13 @@ Test Passed									</td>
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>17:40:43</td>
+				<td>10:43:14</td>
 				<td>
 <span class='badge black-text green'>Login</span>									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>17:40:43</td>
+				<td>10:43:14</td>
 				<td>
 Test Passed									</td>
 			</tr>
@@ -414,7 +414,7 @@ Test Passed									</td>
 							<div class="test-detail"> 
 								<p class="name">Logins</p> 
 								<p class="duration text-sm">0h:0m:0s+000ms</p> 
-								<span class="datetime">17:40:51 PM</span>
+								<span class="datetime">10:43:20 AM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -422,8 +422,8 @@ Test Passed									</td>
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">Logins</h5>
-										<span class='badge badge-success'>22-08-2020 17:40:51</span>
-										<span class='badge badge-danger'>22-08-2020 17:40:51</span>
+										<span class='badge badge-success'>23-08-2020 10:43:20</span>
+										<span class='badge badge-danger'>23-08-2020 10:43:20</span>
 										<span class='badge badge-default'>0h:0m:0s+000ms</span>
 									</div>
 																	</div>
@@ -439,13 +439,13 @@ Test Passed									</td>
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>17:40:51</td>
+				<td>10:43:20</td>
 				<td>
 <span class='badge black-text green'>Logins</span>									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>17:40:51</td>
+				<td>10:43:20</td>
 				<td>
 Test Passed									</td>
 			</tr>
@@ -524,7 +524,7 @@ Test Passed									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Start</h6>
-							<h6 class="font-weight-light">22-08-2020 17:38:47</h6>
+							<h6 class="font-weight-light">23-08-2020 10:41:20</h6>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -540,7 +540,7 @@ Test Passed									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Duration</h6>
-							<h6 class="font-weight-light">00:02:03.5660618</h6>
+							<h6 class="font-weight-light">00:02:00.1518873</h6>
 							<span class="text-semibold text-danger font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -556,7 +556,7 @@ Test Passed									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<p class="">Duration</p>
-							<h6 class="font-weight-light">00:02:03.5696458</h6>
+							<h6 class="font-weight-light">00:02:00.1538827</h6>
 							<span class="text-semibold font-size-15">
 						</div>
 						<div class="align-self-end">
