--- a/Bookswagon/Reports/index.html
+++ b/Bookswagon/Reports/index.html
@@ -49,7 +49,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">25-08-2020 13:48:28</span>
+                    <span class="badge badge-primary">25-08-2020 18:15:36</span>
                 </a>
             </li>
         </ul>
@@ -119,8 +119,8 @@
 						<div class="open-test">
 							<div class="test-detail"> 
 								<p class="name">BookswagonLogin</p> 
-								<p class="duration text-sm">0h:0m:0s+048ms</p> 
-								<span class="datetime">13:49:03 PM</span>
+								<p class="duration text-sm">0h:0m:0s+061ms</p> 
+								<span class="datetime">18:16:08 PM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -128,9 +128,9 @@
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">BookswagonLogin</h5>
-										<span class='badge badge-success'>25-08-2020 13:49:03</span>
-										<span class='badge badge-danger'>25-08-2020 13:49:03</span>
-										<span class='badge badge-default'>0h:0m:0s+048ms</span>
+										<span class='badge badge-success'>25-08-2020 18:16:08</span>
+										<span class='badge badge-danger'>25-08-2020 18:16:08</span>
+										<span class='badge badge-default'>0h:0m:0s+061ms</span>
 									</div>
 																	</div>
 							</div>
@@ -145,13 +145,13 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>13:49:03</td>
+				<td>18:16:08</td>
 				<td>
 <span class='badge black-text green'>BookswagonLogin</span>									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>13:49:03</td>
+				<td>18:16:08</td>
 				<td>
 Test Passed									</td>
 			</tr>
@@ -169,7 +169,7 @@ Test Passed									</td>
 							<div class="test-detail"> 
 								<p class="name">BookSearching</p> 
 								<p class="duration text-sm">0h:0m:0s+000ms</p> 
-								<span class="datetime">13:49:38 PM</span>
+								<span class="datetime">18:16:28 PM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -177,8 +177,8 @@ Test Passed									</td>
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">BookSearching</h5>
-										<span class='badge badge-success'>25-08-2020 13:49:38</span>
-										<span class='badge badge-danger'>25-08-2020 13:49:38</span>
+										<span class='badge badge-success'>25-08-2020 18:16:28</span>
+										<span class='badge badge-danger'>25-08-2020 18:16:28</span>
 										<span class='badge badge-default'>0h:0m:0s+000ms</span>
 									</div>
 																	</div>
@@ -194,13 +194,13 @@ Test Passed									</td>
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>13:49:38</td>
+				<td>18:16:28</td>
 				<td>
 <span class='badge black-text green'>BookSearching</span>									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>13:49:38</td>
+				<td>18:16:28</td>
 				<td>
 Test Passed									</td>
 			</tr>
@@ -218,7 +218,7 @@ Test Passed									</td>
 							<div class="test-detail"> 
 								<p class="name">SearchBooks</p> 
 								<p class="duration text-sm">0h:0m:0s+000ms</p> 
-								<span class="datetime">13:49:49 PM</span>
+								<span class="datetime">18:16:41 PM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -226,8 +226,8 @@ Test Passed									</td>
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">SearchBooks</h5>
-										<span class='badge badge-success'>25-08-2020 13:49:49</span>
-										<span class='badge badge-danger'>25-08-2020 13:49:49</span>
+										<span class='badge badge-success'>25-08-2020 18:16:41</span>
+										<span class='badge badge-danger'>25-08-2020 18:16:41</span>
 										<span class='badge badge-default'>0h:0m:0s+000ms</span>
 									</div>
 																	</div>
@@ -243,13 +243,13 @@ Test Passed									</td>
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>13:49:49</td>
+				<td>18:16:41</td>
 				<td>
 <span class='badge black-text green'>SearchBooks</span>									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>13:49:49</td>
+				<td>18:16:41</td>
 				<td>
 Test Passed									</td>
 			</tr>
@@ -267,7 +267,7 @@ Test Passed									</td>
 							<div class="test-detail"> 
 								<p class="name">AddtoCart</p> 
 								<p class="duration text-sm">0h:0m:0s+000ms</p> 
-								<span class="datetime">13:50:06 PM</span>
+								<span class="datetime">18:16:59 PM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -275,8 +275,8 @@ Test Passed									</td>
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">AddtoCart</h5>
-										<span class='badge badge-success'>25-08-2020 13:50:06</span>
-										<span class='badge badge-danger'>25-08-2020 13:50:06</span>
+										<span class='badge badge-success'>25-08-2020 18:16:59</span>
+										<span class='badge badge-danger'>25-08-2020 18:16:59</span>
 										<span class='badge badge-default'>0h:0m:0s+000ms</span>
 									</div>
 																	</div>
@@ -292,13 +292,13 @@ Test Passed									</td>
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>13:50:06</td>
+				<td>18:16:59</td>
 				<td>
 <span class='badge black-text green'>AddtoCart</span>									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>13:50:06</td>
+				<td>18:16:59</td>
 				<td>
 Test Passed									</td>
 			</tr>
@@ -316,7 +316,7 @@ Test Passed									</td>
 							<div class="test-detail"> 
 								<p class="name">DeliveryAddress</p> 
 								<p class="duration text-sm">0h:0m:0s+000ms</p> 
-								<span class="datetime">13:50:26 PM</span>
+								<span class="datetime">18:17:21 PM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -324,8 +324,8 @@ Test Passed									</td>
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">DeliveryAddress</h5>
-										<span class='badge badge-success'>25-08-2020 13:50:26</span>
-										<span class='badge badge-danger'>25-08-2020 13:50:26</span>
+										<span class='badge badge-success'>25-08-2020 18:17:21</span>
+										<span class='badge badge-danger'>25-08-2020 18:17:21</span>
 										<span class='badge badge-default'>0h:0m:0s+000ms</span>
 									</div>
 																	</div>
@@ -341,13 +341,13 @@ Test Passed									</td>
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>13:50:26</td>
+				<td>18:17:21</td>
 				<td>
 <span class='badge black-text green'>DeliveryAddress</span>									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>13:50:26</td>
+				<td>18:17:21</td>
 				<td>
 Test Passed									</td>
 			</tr>
@@ -365,7 +365,7 @@ Test Passed									</td>
 							<div class="test-detail"> 
 								<p class="name">Login</p> 
 								<p class="duration text-sm">0h:0m:0s+000ms</p> 
-								<span class="datetime">13:50:34 PM</span>
+								<span class="datetime">18:17:30 PM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -373,8 +373,8 @@ Test Passed									</td>
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">Login</h5>
-										<span class='badge badge-success'>25-08-2020 13:50:34</span>
-										<span class='badge badge-danger'>25-08-2020 13:50:34</span>
+										<span class='badge badge-success'>25-08-2020 18:17:30</span>
+										<span class='badge badge-danger'>25-08-2020 18:17:30</span>
 										<span class='badge badge-default'>0h:0m:0s+000ms</span>
 									</div>
 																	</div>
@@ -390,13 +390,13 @@ Test Passed									</td>
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>13:50:34</td>
+				<td>18:17:30</td>
 				<td>
 <span class='badge black-text green'>Login</span>									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>13:50:34</td>
+				<td>18:17:30</td>
 				<td>
 Test Passed									</td>
 			</tr>
@@ -412,18 +412,18 @@ Test Passed									</td>
 						</div>
 						<div class="open-test">
 							<div class="test-detail"> 
-								<p class="name">Logins</p> 
+								<p class="name">UserLogin</p> 
 								<p class="duration text-sm">0h:0m:0s+000ms</p> 
-								<span class="datetime">13:50:42 PM</span>
+								<span class="datetime">18:17:36 PM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
 							<div class="detail-head">
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
-										<h5 class="test-status text-pass">Logins</h5>
-										<span class='badge badge-success'>25-08-2020 13:50:42</span>
-										<span class='badge badge-danger'>25-08-2020 13:50:42</span>
+										<h5 class="test-status text-pass">UserLogin</h5>
+										<span class='badge badge-success'>25-08-2020 18:17:36</span>
+										<span class='badge badge-danger'>25-08-2020 18:17:36</span>
 										<span class='badge badge-default'>0h:0m:0s+000ms</span>
 									</div>
 																	</div>
@@ -439,13 +439,13 @@ Test Passed									</td>
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>13:50:42</td>
+				<td>18:17:36</td>
 				<td>
-<span class='badge black-text green'>Logins</span>									</td>
+<span class='badge black-text green'>UserLogin</span>									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>13:50:42</td>
+				<td>18:17:36</td>
 				<td>
 Test Passed									</td>
 			</tr>
@@ -524,7 +524,7 @@ Test Passed									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Start</h6>
-							<h6 class="font-weight-light">25-08-2020 13:48:28</h6>
+							<h6 class="font-weight-light">25-08-2020 18:15:36</h6>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -540,7 +540,7 @@ Test Passed									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Duration</h6>
-							<h6 class="font-weight-light">00:02:14.2312512</h6>
+							<h6 class="font-weight-light">00:02:00.3035176</h6>
 							<span class="text-semibold text-danger font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -556,7 +556,7 @@ Test Passed									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<p class="">Duration</p>
-							<h6 class="font-weight-light">00:02:14.2325819</h6>
+							<h6 class="font-weight-light">00:02:00.3055108</h6>
 							<span class="text-semibold font-size-15">
 						</div>
 						<div class="align-self-end">
